service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: devops-app
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
